syntax = "proto3";

package task_manager;

option go_package = "/proto";

service TaskManager {
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
  rpc ReadTask(ReadTaskRequest) returns (TaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message CreateTaskRequest {
  string name = 1;
  string description = 2;
  TaskPriority priority = 3;
  uint32 assignee = 4;
  TaskStatus status = 5;
}

message ReadTaskRequest {
  uint32 id = 1;
}

message UpdateTaskRequest {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  TaskPriority priority = 4;
  uint32 assignee = 5;
  TaskStatus status = 6;
}

message DeleteTaskRequest {
  uint32 id = 1;
}

message TaskResponse {
  bool success = 1;
  string message = 2;
  uint32 id = 3;
  string name = 4;
  string description = 5;
  TaskPriority priority = 6;
  uint32 assignee = 7;
  TaskStatus status = 8;
  string created_at = 9;
  string updated_at = 10;
  string deleted_at = 11;
}

message DeleteTaskResponse {
  bool success = 1;
  string message = 2;  
}

enum TaskStatus {
  BACKLOG = 0;
  TODO = 1;
  IN_PROGRESS = 2;
  DONE = 3;
}

enum TaskPriority {
  LOW = 0;
  MEDIUM = 1;
  HIGH = 2;
  URGENT = 3;
}
